IA: Fixed Produt Detail Issues - Fixed Layout Issues

--- a/MarketPlace.Web/Content/styles/ProductDetails.css
+++ b/MarketPlace.Web/Content/styles/ProductDetails.css
@@ -1,9 +1,5 @@
 ﻿
-/*****************globals*************/
-body {
-    font-family: 'open sans';
-    overflow-x: hidden;
-}
+ 
 
 img {
     max-width: 100%;
@@ -20,13 +16,7 @@ img {
     -ms-flex-direction: column;
     flex-direction: column;
 }
-
-@media screen and (max-width: 996px) {
-    .preview {
-        margin-bottom: 20px;
-    }
-}
-
+ 
 .preview-pic {
     -webkit-box-flex: 1;
     -webkit-flex-grow: 1;
@@ -76,16 +66,7 @@ img {
     padding: 3em;
     line-height: 1.5em;
 }
-
-@media screen and (min-width: 997px) {
-    .wrapper {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-    }
-}
-
+ 
 .details {
     display: -webkit-box;
     display: -webkit-flex;
